2005-10-16  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Engine.pm, Services.pm, Checksum.pm, Checksum/MD5.pm: refactored the
	MD5sum stuff into a checksum module.  Still TODO: implement code to
	have each @ISA(Fink::Checksum) know where it should be in the mirror
	system (for when we have multiple checksum types for a package), also
	change the checksum code around to actually use this in a
	non-MD5-specific way (right now it's just a behind-the-scenes
	drop-in replacement for the existing MD5 code) but hey, it's a start.
	Now we just need to decide on a standard for the mirror servers
	w/ the OD folks.  ;)

2005-10-12  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: During finish(), only update "important" (but not
	Essential) packages if they are already installed.

2005-10-12  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, Package.pm, PkgVersion.pm: New Package::control_buildlocks
	class method used to control access to whole buildlock system.
	* Engine.pm: During buildlock cleanup, only remove lockpkgs that
	are installed (indicated by presence of their .pid files).

2005-10-11  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Add a flock-based outer layer around the
	dpkg-based buildlocks. Now "the lock" automatically goes away when
	fink process dies, so buildlock pkgs don't need to prevent
	self-replacement.
	* Engine.pm: Buildlock cleanup can now check for flockable
	lockfiles instead of dealing with stored pids.

2005-10-07  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Quote --logfile as shell arg.

2005-10-07  Daniel Macks  <dmacks@netspace.org>

	* Config.pm, PkgVersion.pm: Implement --logfile cmdline flag to
	specify buildlog filename (with %-expansion)

2005-10-06  Daniel Macks  <dmacks@netspace.org>

	* Config.pm, PkgVersion.pm: Store copies of filehandles as
	PkgVersion package-globals instead of in Config. When setting
	STDERR tee filter, child process's STDERR is always fd 2 (don't