@@ -1,6 +1,6 @@
 # -*- mode: Perl; tab-width: 4; -*-
 #
-# Fink::Checksum::MD5 module
+# Fink::Checksum::SHA256 module
 #
 # Fink - a package manager that downloads source and installs it
 # Copyright (c) 2005 The Fink Package Manager Team
@@ -20,7 +20,7 @@
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA      02111-1307, USA.
 #
 
-package Fink::Checksum::MD5;
+package Fink::Checksum::SHA256;
 
 use Fink::Checksum;
 use Fink::Config qw($basepath);
@@ -28,13 +28,13 @@ use Fink::Config qw($basepath);
 our @ISA = qw(Fink::Checksum);
 our $VERSION = ( qw$Revision$ )[-1];
 
-our $md5cmd;
+our $sha256cmd;
 our $match;
 
 sub about {
 	my $self = shift;
 
-	my @about = ('MD5', $VERSION, 'MD5 checksum');
+	my @about = ('SHA256', $VERSION, 'SHA256 checksum', [ 'md5deep' ] );
 	return wantarray? @about : \@about;
 }
 
@@ -43,22 +43,20 @@ sub new {
 
 	my $self = bless({}, $class);
 
-	if(-e "/sbin/md5") {
-		$md5cmd = "/sbin/md5";
-		$match = '= ([^\s]+)$';
-	} elsif (-e "$basepath/bin/md5deep") {
-		$md5cmd = "$basepath/bin/md5deep";
-		$match = '([^\s]*)\s*(:?[^\s]*)';
-	} else {
-		$md5cmd = "md5sum";
-		$match = '([^\s]*)\s*(:?[^\s]*)';
+	$match = '([^\s]*)\s*(:?[^\s]*)';
+
+	if (-e "$basepath/bin/sha256deep") {
+		$sha256cmd = "$basepath/bin/sha256deep";
+	}
+
+	if (not -x $sha256cmd) {
+		die "unable to find sha256 implementation\n";
 	}
 
 	return $self;
 }
 
-# Returns the MD5 checksum of the given $filename. Uses /sbin/md5 if it
-# is available, otherwise uses the first md5sum in PATH. The output of
+# Returns the SHA256 checksum of the given $filename.  The output of
 # the chosen command is read via an open() pipe and matched against the
 # appropriate regexp. If the command returns failure or its output was
 # not in the expected format, the program dies with an error message.
@@ -69,16 +67,16 @@ sub get_checksum {
 
 	my ($pid, $checksum);
 
-	$pid = open(MD5SUM, "$md5cmd $filename |") or die "Couldn't run $md5cmd: $!\n";
-	while (<MD5SUM>) {
+	$pid = open(SHA256SUM, "$sha256cmd $filename |") or die "Couldn't run $sha256cmd: $!\n";
+	while (<SHA256SUM>) {
 		if (/$match/) {
 			$checksum = $1;
 		}
 	}
-	close(MD5SUM) or die "Error on closing pipe  $md5cmd: $!\n";
+	close(SHA256SUM) or die "Error on closing pipe  $sha256cmd: $!\n";
 
 	if (not defined $checksum) {
-		die "Could not parse results of '$md5cmd $filename'\n";
+		die "Could not parse results of '$sha256cmd $filename'\n";
 	}
 
 	return lc($checksum);
